--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 # Next-web 本地开发环境配置
 
 # 后端API地址（本地开发使用localhost）
-NEXT_PUBLIC_API_URL=http://localhost:8080
+NEXT_PUBLIC_API_URL=http://local.zeusai.top:8890
 
 # 站点ID
 NEXT_PUBLIC_SITE_ID=1
